--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ addons:
   coverity_scan:
     project:
       name: "dar-ushka/test"
-      description: "<Your project description here>"
+      description: "Build submitted via Travis CI"
     notification_email: coverity_checker@cloudlinux.com
-    build_command_prepend: "<Your build preprocessing command here>"
-    build_command:   "<Your build command here>"
+    build_command_prepend: ""
+    build_command:   ""
     branch_pattern: coverity_scan
 
